feat: observer correct, style: naming conventions

--- a/src/main/resources/com/example/kpp7/main-view.fxml
+++ b/src/main/resources/com/example/kpp7/main-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kpp7.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="690.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.kpp7.MainViewController">
    <children>
       <Button fx:id="helloButton" layoutX="541.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#onHelloButtonClick" text="HelloButton" />
       <Label fx:id="welcomeText" layoutX="629.0" layoutY="17.0" text="REPLACE" />
